--- a/caravan/style.css
+++ b/caravan/style.css
@@ -8,19 +8,20 @@
 a {
   text-decoration: none;
 }
- 
+
 .clearfix::after {
   content: "";
   display: block;
   clear: both;
 }
- 
+
 header {
   width: 100%;
   text-align: center;
 }
 header .headline{
   font-size: 32px;
+  padding: 15px 0;
 }
 .nav-list {
   text-align: center;
@@ -28,11 +29,11 @@ header .headline{
   margin: 0 auto;
 }
 .nav-list-item {
-  list-style: none;   
+  list-style: none;
   display: inline-block;
   margin: 0 20px;
 }
- 
+
 .main-visual {
   width: 100%;
   height: 300px;
@@ -54,11 +55,11 @@ header .headline{
   color: #fff;
   margin-top: 30px;
 }
- 
+
 main {
   width: 800px;
   margin: 0 auto; /* 領域を中央揃え */
-  padding: 70px 0; /* 上下に70px、左右に0pxの内側余白 */ 
+  padding: 70px 0; /* 上下に70px、左右に0pxの内側余白 */
 }
 .blog {
   width: 540px;
@@ -101,17 +102,85 @@ main {
   color: #fff;
   font-size: 11px;
 }
+
+
 .sidebar {
   width: 230px;
   float: left;
 }
+.sidebar-headline, .instagram-headline, .categories-headline {
+  border-bottom: 8px solid #f7f7f7;
+  text-align: center;
+  line-height: 0.6;
+}
+.sidebar-contents {
+  padding: 50px 0;
+}
+.popular-text, .categories-text {
+  padding-bottom: 5px;
+  border-bottom: 1px solid #f7f7f7;
+  margin-bottom: 5px;
+}
+.popular-text:last-child, .categories-text:last-child {
+  margin: 0;
+  padding: 0;
+  border: none;
+}
+.instagram-box {
+  float: left;
+  width: 110px;
+  padding-top: 110px;
+  background-size: cover;
+  background-position: center;
+}
+.instagram-box:nth-child(odd) {
+  margin: 0 10px 10px 0;
+}
+.instagram-box:nth-child(1) {
+  background-image: url(img/airport.jpg);
+}
+.instagram-box:nth-child(2) {
+  background-image: url(img/japan.jpg);
+}
+.instagram-box:nth-child(3) {
+  background-image: url(img/snow.jpg);
+}
+.instagram-box:nth-child(4) {
+  background-image: url(img/japan2.jpg);
+}
+.instagram-box:nth-child(5) {
+  background-image: url(img/lake.jpg);
+}
+.instagram-box:nth-child(6) {
+  background-image: url(img/road.jpg);
+}
+
+
+
 footer {
   width: 100%;
-  height: 120px; 
+  height: 120px;
   text-align: center;
   padding: 50px 0;
   background-color: #848282;
 }
 .footer-text {
   color: #fff;
+}
+
+
+
+.pagination {
+  text-align: center;
+  padding-top: 50px;
+}
+.pagination p {
+  width: 30px;
+  height: 30px;
+  display: inline-block;
+  color: white;
+  background-color: #acabab;
+  border-radius: 3px;
+  margin: 0 5px;
+  line-height: 30px;
 }
