--- a/caravan/style.css
+++ b/caravan/style.css
@@ -14,14 +14,27 @@ a {
   display: block;
   clear: both;
 }
-
+header, nav, h2, .main-visual, footer {
+  font-family: Chalkduster, "Bradley Hand", Courier, "Segoe Print", sans-serif;
+}
 header {
-  width: 100%;
+  position: relative;
+  width: 90%;
+  padding: 15px 0;
+  margin: 0 auto;
   text-align: center;
 }
 header .headline{
   font-size: 32px;
-  padding: 15px 0;
+}
+.social {
+  position: absolute;
+  top: 22px;
+  right: 22px;
+}
+.social i {
+  display: inline-block;
+  margin-left: 20px;
 }
 .nav-list {
   text-align: center;
