--- a/assignment1.css
+++ b/assignment1.css
@@ -65,14 +65,19 @@ main {
 
 @media screen and (max-width: 768px) {
 	main {
-		width: 90%;
-		margin: 50px auto;
+		width: 100%;
+		margin: 50px 0;
 	}
 	.contents {
-		margin-bottom: 20px;
+		width: 90%;
+		float: none;
+		margin: 0 auto;
 	}
-	.contents:last-child {
-		margin-bottom: 0;
-	}
+	.contents:nth-child(2) {
+		margin: 20px auto;
+    }
+    .contents:last-child {
+    	margin: 0 auto;
+    }
 
 }
